--- a/about.html
+++ b/about.html
@@ -147,7 +147,7 @@
         <!-- =============================================================== -->
         <!-- START: About Us Hero Section -->
         <!-- =============================================================== -->
-        <section class="bg-white pt-16 pb-32 sm:pt-24 sm:pb-40">
+        <section class="bg-white py-12  sm:pt-12 ">
             <div class="container mx-auto ">
                 <div class="flex flex-col lg:flex-row items-center gap-12 lg:gap-8">
                     
@@ -160,7 +160,7 @@
                             A Journey of care, Growth and Trust.
                         </p>
                         <div class="mt-8">
-                            <a href="#" class="inline-block bg-brand-teal text-white font-bold py-3 px-8 rounded-full hover:bg-opacity-90 transition-colors shadow-lg">
+                            <a href="#" class="inline-block bg-brand-teal text-white font-bold py-5 px-12 rounded-full hover:bg-opacity-90 transition-colors shadow-lg">
                                 Book Appointment
                             </a>
                         </div>
@@ -251,7 +251,7 @@
 <!-- =============================================================== -->
 <!-- START: Why Choose Us Section -->
 <!-- =============================================================== -->
-<section class="bg-white py-16 sm:py-24">
+<section class="bg-white pt-16 sm:pt-24">
     <div class="container mx-auto px-4">
         <!-- Main Grid Layout -->
         <div class="grid grid-cols-1 lg:grid-cols-2 gap-24 lg:gap-24 items-center">
@@ -445,7 +445,7 @@
 <!-- =============================================================== -->
 <!-- START: Best Features Section -->
 <!-- =============================================================== -->
-<section class="bg-green-light py-16 sm:py-24">
+<section class="bg-green-light py-8 sm:py-12">
     <div class="container mx-auto px-4">
         <!-- Section Header -->
         <div class="text-center mb-12">
@@ -547,7 +547,7 @@
     </main>
 
 <!-- START: Corrected Footer Section -->
-<footer class="text-white pt-20">
+<footer class="text-white pt-12">
 
     <!-- Main Footer Area (Darkest Background) -->
     <div class="bg-footer-teal">
@@ -567,13 +567,13 @@
                         <div class="bg-white p-1 rounded-md"><img src="assets/iqcity-logo.png" alt="Accreditation Logo 4" class="h-10"></div>
                     </div>
                     <p class="text-white/70 text-sm">Durgapur | District: Burdwan,<br>West Bengal I Pin: 713206</p>
-                    <div>
+                    <!-- <div>
                         <p class="font-semibold text-lg">Stay Update to our newsletter</p>
                         <form class="flex mt-2">
                             <input type="email" placeholder="Enter your email address" class="w-full rounded-l-md bg-black/20 text-white placeholder-white/50 py-2.5 px-4 focus:outline-none focus:ring-2 focus:ring-brand-green-dark border-none">
                             <button type="submit" class="bg-white text-brand-teal font-bold px-5 rounded-r-md hover:bg-gray-200 transition-colors">Subscribe</button>
                         </form>
-                    </div>
+                    </div> -->
                 </div>
 
                 <!-- Column 3: Spacer -->
@@ -652,6 +652,5 @@
 <!-- END: New Footer Section -->
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
     <script src="dist/js/main.js"></script>
-
 </body>
 </html>
