--- a/contact.html
+++ b/contact.html
@@ -274,7 +274,7 @@
 </main>
 
 <!-- START: Corrected Footer Section -->
-<footer class="text-white pt-20">
+<footer class="text-white pt-12">
 
     <!-- Main Footer Area (Darkest Background) -->
     <div class="bg-footer-teal">
@@ -294,13 +294,13 @@
                         <div class="bg-white p-1 rounded-md"><img src="assets/iqcity-logo.png" alt="Accreditation Logo 4" class="h-10"></div>
                     </div>
                     <p class="text-white/70 text-sm">Durgapur | District: Burdwan,<br>West Bengal I Pin: 713206</p>
-                    <div>
+                    <!-- <div>
                         <p class="font-semibold text-lg">Stay Update to our newsletter</p>
                         <form class="flex mt-2">
                             <input type="email" placeholder="Enter your email address" class="w-full rounded-l-md bg-black/20 text-white placeholder-white/50 py-2.5 px-4 focus:outline-none focus:ring-2 focus:ring-brand-green-dark border-none">
                             <button type="submit" class="bg-white text-brand-teal font-bold px-5 rounded-r-md hover:bg-gray-200 transition-colors">Subscribe</button>
                         </form>
-                    </div>
+                    </div> -->
                 </div>
 
                 <!-- Column 3: Spacer -->
@@ -379,6 +379,5 @@
 <!-- END: New Footer Section -->
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
     <script src="dist/js/main.js"></script>
-
 </body>
 </html>
