--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 <main>
     
    <!-- Hero Section -->
-<section class="bg-white pt-12 pb-12 sm:pt-24 sm:pb-32">
+<section class="bg-white pt-12 pb-4 sm:pt-12 sm:pb-12">
     <div class="container mx-auto px-4">
         <div class="flex flex-col lg:flex-row items-center gap-12">
 
@@ -207,7 +207,7 @@
     <!-- ... just after the closing </section> tag of the Hero Section ... -->
 
 <!-- Statistics Banner -->
-<section id="statistics-section" class="bg-brand-teal text-white py-12 md:py-16">
+<section id="statistics-section" class="bg-brand-teal text-white py-4 md:py-16">
     <div class="container mx-auto px-4">
         <div class="grid grid-cols-2 md:grid-cols-4 gap-8">
             <div class="text-center">
@@ -485,7 +485,7 @@
 
 <!-- Health at Home Section -->
 <!-- Health at Home Section -->
-<section class="bg-white pt-16 sm:pt-16 pb-16">
+<section class="bg-white pt-12 sm:pt-12 ">
     <div class="container mx-auto px-4">
         <!-- Section Header -->
         <div class="text-center mb-12">
@@ -741,7 +741,7 @@
 
 
     <!-- Expert Doctors Section -->
-    <section class="bg-white py-16 sm:py-16 relative">
+    <section class="bg-white pt-12 sm:pt-12 relative">
         <div class="absolute top-10 right-1/2 translate-x-1/2 z-0"></div>
         <div class="container mx-auto relative z-10">
             <div class="text-center mb-12 px-4">
@@ -794,7 +794,7 @@
     <!-- ... just after the closing </section> tag of the Expert Doctors Section ... -->
 
 <!-- START: Final Expert Opinions Section -->
-<section class="bg-white py-16 sm:py-16">
+<section class="bg-white pt-12 sm:pt-12">
     <div class="container mx-auto px-4">
         <!-- Section Header -->
         <div class="text-center mb-12">
@@ -915,7 +915,7 @@
 <!-- ... just after the closing </section> tag of the Expert Opinions Section ... -->
 
 <!-- Healing Journeys (Videos) Section -->
-<section class="bg-white pb-16 sm:pb-16">
+<section class="bg-white pt-16 sm:pt-16">
     <div class="container mx-auto px-4">
         
         <!-- Section Header -->
@@ -990,7 +990,7 @@
 </section>
 
 <!-- CSR Activities Section -->
-<section class="bg-white py-16 sm:py-24">
+<section class="bg-white pt-12 sm:pt-22">
     <div class="container mx-auto px-4">
         <!-- Section Header -->
         <div class="flex flex-col sm:flex-row justify-between items-start sm:items-center mb-12">
@@ -1067,10 +1067,10 @@
 
 
 <!-- START: Updated Testimonials Section -->
-<section class="bg-white py-16 sm:py-24">
+<section class="bg-white pt-12 sm:pt-12">
     <div class="container mx-auto px-4">
         <!-- Section Header -->
-        <div class="text-center mb-16">
+        <div class="text-center mb-4">
             <div class="inline-block bg-brand-green rounded-full py-3 px-5 mb-4">
                 <span class="text-lg font-semibold text-brand-teal">Testimonial</span>
             </div>
@@ -1166,7 +1166,7 @@
 
 <!-- CTA Section -->
 <section class="bg-brand-green-dark relative overflow-hidden">
-    <div class="container mx-auto px-4 py-16 sm:py-24 relative z-10">
+    <div class="container mx-auto px-4 pt-12 sm:pt-12 relative z-10">
         <div class="max-w-xl">
             <!-- Tag -->
             <div class="inline-block bg-brand-green rounded-full py-1 px-5 mb-4">
@@ -1182,7 +1182,7 @@
             </p>
 
             <!-- Action Buttons -->
-            <div class="mt-8 flex flex-col sm:flex-row gap-4">
+            <div class="mt-8 mb-20 flex flex-col sm:flex-row gap-4">
                 <a href="#" class="bg-brand-teal text-white font-bold py-3 px-6 rounded-md hover:bg-opacity-90 transition-colors text-center flex items-center justify-center gap-2">
                     Book a appointment →
                 </a>
@@ -1264,7 +1264,7 @@
 </section>
 
 <!-- START: Corrected Footer Section -->
-<footer class="text-white pt-20">
+<footer class="text-white pt-12">
 
     <!-- Main Footer Area (Darkest Background) -->
     <div class="bg-footer-teal">
@@ -1284,13 +1284,13 @@
                         <div class="bg-white p-1 rounded-md"><img src="assets/iqcity-logo.png" alt="Accreditation Logo 4" class="h-10"></div>
                     </div>
                     <p class="text-white/70 text-sm">Durgapur | District: Burdwan,<br>West Bengal I Pin: 713206</p>
-                    <div>
+                    <!-- <div>
                         <p class="font-semibold text-lg">Stay Update to our newsletter</p>
                         <form class="flex mt-2">
                             <input type="email" placeholder="Enter your email address" class="w-full rounded-l-md bg-black/20 text-white placeholder-white/50 py-2.5 px-4 focus:outline-none focus:ring-2 focus:ring-brand-green-dark border-none">
                             <button type="submit" class="bg-white text-brand-teal font-bold px-5 rounded-r-md hover:bg-gray-200 transition-colors">Subscribe</button>
                         </form>
-                    </div>
+                    </div> -->
                 </div>
 
                 <!-- Column 3: Spacer -->
