--- a/Guidelines.html
+++ b/Guidelines.html
@@ -167,7 +167,7 @@
          ================================================================= -->
     <nav class="bg-white border border-brand-gray mt-8">
         <div class="container mx-auto px-4 py-3">
-            <p class="text-sm text-gray-600">
+            <p class="text-md text-gray-600">
                 <a href="index.html" class="hover:text-brand-teal">Home</a>
                 <span class="mx-2">/</span>
                 <a href="#" class="hover:text-brand-teal">Departments</a>
@@ -182,7 +182,7 @@
 <!-- In index.html, after the Appointment Form Section -->
 
 <!-- Registration Guidelines Section -->
-<section class="bg-white py-16 sm:py-24">
+<section class="bg-white py-8">
     <div class="container mx-auto px-4">
         <!-- Grid container for two-column layout -->
         <div class="grid grid-cols-1 lg:grid-cols-2 gap-12 items-center">
@@ -257,7 +257,7 @@
 <!-- In index.html, after the Registration Guidelines Section -->
 
 <!-- In Patient Billing/Admission Process Guidelines Section -->
-<section class="bg-white py-16 sm:py-24">
+<section class="bg-white py-8">
     <div class="container mx-auto px-4">
         <!-- Section Title -->
         <div class="text-center mb-12">
@@ -353,7 +353,7 @@
 <!-- In index.html, after the In Patient Billing Section -->
 
 <!-- Out Patient Billing Guidelines Section -->
-<section class="bg-white py-16 sm:py-24">
+<section class="bg-white py-8">
     <div class="container mx-auto px-4">
         <!-- Section Title -->
         <div class="text-center mb-12">
@@ -449,7 +449,7 @@
 <!-- In index.html, after the Out Patient Billing Guidelines Section -->
 
 <!-- Visitors' Pass Section -->
-<section class="bg-white py-16 sm:py-24">
+<section class="bg-white py-8">
     <div class="container mx-auto px-4">
         <!-- Section Title -->
         <div class="text-center mb-12">
