--- a/Insurance.html
+++ b/Insurance.html
@@ -152,7 +152,7 @@
 <section class="relative h-[50vh] flex items-center justify-center text-center">
     <!-- Background Image -->
     <div class="absolute inset-0 bg-black/60">
-        <img src="assets/banner.jpg" alt="Doctors discussing an appointment schedule on a laptop" class="w-full h-full object-cover mix-blend-overlay">
+        <img src="assets/insurence-banner.jpg" alt="Doctors discussing an appointment schedule on a laptop" class="w-full h-full object-cover mix-blend-overlay">
     </div>
 
     <!-- Text Content -->
@@ -167,7 +167,7 @@
          ================================================================= -->
     <nav class="bg-white border border-brand-gray mt-8">
         <div class="container mx-auto px-4 py-3">
-            <p class="text-sm text-gray-600">
+            <p class="text-md text-gray-600">
                 <a href="index.html" class="hover:text-brand-teal">Home</a>
                 <span class="mx-2">/</span>
                 <a href="#" class="hover:text-brand-teal">Departments</a>
@@ -183,7 +183,7 @@
 <!-- In index.html, after the Visitors' Pass Section -->
 
 <!-- Cashless Hospitalization Section -->
-<section class="bg-white py-16 sm:py-24">
+<section class="bg-white py-8">
     <div class="container mx-auto px-4">
 
         <!-- Top Block: Guidelines -->
@@ -202,7 +202,7 @@
             </div>
             <!-- Right Column: Image -->
             <div>
-                <img src="assets/banner.jpg" alt="A person making a cashless payment with a credit card on a mobile terminal" class="rounded-2xl shadow-lg w-full h-auto object-cover">
+                <img src="assets/inn-inner.jpg" alt="A person making a cashless payment with a credit card on a mobile terminal" class="rounded-2xl shadow-lg w-full h-auto object-cover">
             </div>
         </div>
 
@@ -210,7 +210,7 @@
         <div class="mt-24 grid grid-cols-1 lg:grid-cols-2 gap-12 items-center">
             <!-- Left Column: Image -->
             <div>
-                <img src="assets/banner.jpg" alt="Two doctors in masks looking at a tablet" class="rounded-2xl shadow-lg w-full h-auto object-cover">
+                <img src="assets/inn-inner-2.jpg" alt="Two doctors in masks looking at a tablet" class="rounded-2xl shadow-lg w-full h-auto object-cover">
             </div>
             <!-- Right Column: Text Content -->
             <div class="text-center lg:text-left">
@@ -263,7 +263,7 @@
 <!-- In index.html, after the Cashless Hospitalization Section -->
 
 <!-- Process For Cashless Facility Section -->
-<section class="bg-white py-16 sm:py-24">
+<section class="bg-white py-8">
     <div class="container mx-auto px-4">
         <!-- Section Title -->
         <div class="text-center mb-12">
@@ -345,7 +345,7 @@
         <div class="space-y-8 mt-8">
         <!-- Service Guidelines Card -->
                  <div class="bg-brand-green-light rounded-2xl p-8 shadow-sm h-full">
-                    <h3 class="text-xl font-bold text-brand-teal text-center mb-4">Service Guidelines</h3>
+                    <h3 class="text-2xl font-bold text-brand-teal text-center mb-4">Service Guidelines</h3>
                     <ul class="space-y-4">
                         <li class="flex items-start gap-4"><div class="flex-shrink-0 mt-1"><div class="bg-brand-green-dark w-6 h-6 rounded-full flex items-center justify-center"><svg class="w-4 h-4 text-white" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="3" d="M5 13l4 4L19 7"></path></svg></div></div><p class="text-brand-text">Cashless service is available through empanelled TPA/Insurance Co only.</p></li>
                         <li class="flex items-start gap-4"><div class="flex-shrink-0 mt-1"><div class="bg-brand-green-dark w-6 h-6 rounded-full flex items-center justify-center"><svg class="w-4 h-4 text-white" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="3" d="M5 13l4 4L19 7"></path></svg></div></div><p class="text-brand-text">All the medical documents including the lab reports, claim forms, discharge summary and final bill has to be submitted to the hospital before being discharged.</p></li>
@@ -380,27 +380,39 @@
                     
                     <!-- Partner Item 1 -->
                     <div class="flex-shrink-0 w-40 h-40 bg-white rounded-full p-4 flex items-center justify-center shadow-md">
-                        <img src="assets/partner-logo-1.png" alt="Apollo Munich Health Insurance" class="max-w-full max-h-full object-contain">
+                        <img src="assets/Apollo.png" alt="Apollo Munich Health Insurance" class="max-w-full max-h-full object-contain">
                     </div>
                     <!-- Partner Item 2 -->
                     <div class="flex-shrink-0 w-40 h-40 bg-white rounded-full p-4 flex items-center justify-center shadow-md">
-                        <img src="assets/partner-logo-2.png" alt="DHS Logo" class="max-w-full max-h-full object-contain">
+                        <img src="assets/DHS.jpg" alt="DHS Logo" class="max-w-full max-h-full object-contain">
                     </div>
                     <!-- Partner Item 3 -->
                     <div class="flex-shrink-0 w-40 h-40 bg-white rounded-full p-4 flex items-center justify-center shadow-md">
-                        <img src="assets/partner-logo-3.png" alt="Family Health Plan Insurance" class="max-w-full max-h-full object-contain">
+                        <img src="assets/Apollo.png" alt="Family Health Plan Insurance" class="max-w-full max-h-full object-contain">
                     </div>
                     <!-- Partner Item 4 -->
                     <div class="flex-shrink-0 w-40 h-40 bg-white rounded-full p-4 flex items-center justify-center shadow-md">
-                        <img src="assets/partner-logo-4.png" alt="Genins India TPA Ltd." class="max-w-full max-h-full object-contain">
+                        <img src="assets/Apollo.png" alt="Family Health Plan Insurance" class="max-w-full max-h-full object-contain">
                     </div>
                     <!-- Partner Item 5 (Duplicate for effect) -->
                     <div class="flex-shrink-0 w-40 h-40 bg-white rounded-full p-4 flex items-center justify-center shadow-md">
-                        <img src="assets/partner-logo-1.png" alt="Apollo Munich Health Insurance" class="max-w-full max-h-full object-contain">
+                        <img src="assets/Apollo.png" alt="Family Health Plan Insurance" class="max-w-full max-h-full object-contain">
                     </div>
                      <!-- Partner Item 6 (Add as many as you need) -->
                     <div class="flex-shrink-0 w-40 h-40 bg-white rounded-full p-4 flex items-center justify-center shadow-md">
-                        <img src="assets/partner-logo-2.png" alt="DHS Logo" class="max-w-full max-h-full object-contain">
+                        <img src="assets/Apollo.png" alt="Family Health Plan Insurance" class="max-w-full max-h-full object-contain">
+                    </div>
+                    <div class="flex-shrink-0 w-40 h-40 bg-white rounded-full p-4 flex items-center justify-center shadow-md">
+                        <img src="assets/Apollo.png" alt="Family Health Plan Insurance" class="max-w-full max-h-full object-contain">
+                    </div>
+                    <div class="flex-shrink-0 w-40 h-40 bg-white rounded-full p-4 flex items-center justify-center shadow-md">
+                        <img src="assets/Apollo.png" alt="Family Health Plan Insurance" class="max-w-full max-h-full object-contain">
+                    </div>
+                    <div class="flex-shrink-0 w-40 h-40 bg-white rounded-full p-4 flex items-center justify-center shadow-md">
+                        <img src="assets/Apollo.png" alt="Family Health Plan Insurance" class="max-w-full max-h-full object-contain">
+                    </div>
+                    <div class="flex-shrink-0 w-40 h-40 bg-white rounded-full p-4 flex items-center justify-center shadow-md">
+                        <img src="assets/Apollo.png" alt="Family Health Plan Insurance" class="max-w-full max-h-full object-contain">
                     </div>
                     
                 </div>
