--- a/contact.html
+++ b/contact.html
@@ -150,9 +150,9 @@
         <!-- NOTE: Replace with your actual banner image path -->
         <div class="absolute inset-0 bg-opacity-30"></div> 
         <div class="relative z-10 h-full flex items-center justify-start">
-            <div class="text-bg text-white w-auto px-4">
+            <div class="text-bg text-white w-auto px-4 text-center md:text-left md:pl-40">
                 <h1 class="text-4xl md:text-5xl lg:text-6xl font-bold text-black">Contact Us</h1>
-                <p class="mt-4 text-lg text-black">From diagnostics to advanced treatment, our cardiology team is here for every beat.</p>
+                <p class="mt-4 text-lg text-black">From diagnostics to advanced treatment,<br /> our cardiology team is here for every beat.</p>
             </div>
         </div>
     </section>
