--- a/patient-rights.html
+++ b/patient-rights.html
@@ -167,7 +167,7 @@
     <!-- Breadcrumb Section -->
     <nav class="bg-white border-t border-b border-gray-200">
         <div class="container mx-auto px-4 py-4">
-            <p class="text-lg text-gray-600">
+            <p class="text-md text-gray-600">
                 <a href="index.html" class="hover:text-brand-teal">Home</a>
                 <span class="mx-2">/</span>
                 <a href="patient-center.html" class="hover:text-brand-teal">Patient Center</a>
@@ -180,7 +180,7 @@
 
     <!-- Add this section after the breadcrumb nav on your patient-rights.html page -->
 
-<section class="bg-white py-16 sm:py-24">
+<section class="bg-white py-8">
     <div class="container mx-auto px-4">
 
         <!-- Section Title -->
@@ -310,7 +310,7 @@
 
 <!-- Add this section after the Patients Right section on the same page -->
 
-<section class="bg-white pt-8 pb-16 sm:pt-12 sm:pb-24">
+<section class="bg-white py-8">
     <div class="container mx-auto px-4">
 
         <!-- Section Title -->
