--- a/wellness-mantra.html
+++ b/wellness-mantra.html
@@ -152,7 +152,7 @@
     </section>
 
     <!-- Main Content Section with Image Grid -->
-    <section class="relative z-10 -mt-20 pb-16 sm:pb-24">
+    <section class="relative z-10 -mt-20 pb-8">
         <div class="container mx-auto px-4">
             
             <!-- Green Content Wrapper -->
