--- a/doctor-profile.html
+++ b/doctor-profile.html
@@ -167,7 +167,7 @@
     </div>
 
     <!-- Main Content Area with Light Green Background -->
-    <div class="bg-white py-12 ">
+    <div class="bg-white py-8 ">
         <div class="container mx-auto px-4">
 
             <!-- Doctor Profile Card -->
@@ -175,7 +175,7 @@
                 <div class="border border-brand-gray/20 flex flex-col md:flex-row items-center gap-6 md:gap-8">
                     <!-- Doctor Image -->
                     <div class="flex-shrink-0">
-                        <div class="bg-brand-green-light rounded-2xl w-52 h-64 flex items-end justify-center overflow-hidden">
+                        <div class="bg-brand-green-light rounded-2xl w-90 h-100 flex items-end justify-center overflow-hidden">
                             <!-- NOTE: Replace with the actual path to the doctor's image -->
                             <img src="assets/doctor.png" alt="Dr. Namrata Parida" class="h-full w-auto object-cover">
                         </div>
@@ -190,7 +190,7 @@
                             <p class="text-gray-700">MS ( Gynea &amp; Obs)</p>
                         </div>
 
-                        <div class="mt-6">
+                        <div class="mt-6  mb-4">
                             <a href="appointment.html" class="bg-brand-teal text-white font-bold py-3 px-8 rounded-full hover:bg-opacity-90 transition-colors inline-block">
                                 Book Appointment
                             </a>
@@ -199,52 +199,69 @@
                 </div>
             </div>
 
-            <!-- =============================================================== -->
-            <!-- START: TABS COMPONENT (Requires Alpine.js) -->
-            <!-- =============================================================== -->
-            <div x-data="{ activeTab: 'overview' }" class="mt-8">
-                <!-- Tab Buttons -->
-                <div class="flex ">
-                    <button @click="activeTab = 'overview'" :class="{ 'bg-brand-green-light text-brand-teal': activeTab === 'overview', 'bg-white text-gray-500 hover:bg-gray-50': activeTab !== 'overview' }" class="border border-brand-gray/20 flex-1 font-semibold py-3 px-4 rounded-t-lg border-r border-gray-200 transition-colors duration-200 focus:outline-none bg-white text-gray-500 hover:bg-gray-50">
-                        OVERVIEW
-                    </button>
-                    <button @click="activeTab = 'expertise'" :class="{ 'bg-brand-green-light text-brand-teal': activeTab === 'expertise', 'bg-white text-gray-500 hover:bg-gray-50': activeTab !== 'expertise' }" class="border border-brand-gray/20 flex-1 font-semibold py-3 px-4 rounded-t-lg border-r border-gray-200 transition-colors duration-200 focus:outline-none bg-white text-gray-500 hover:bg-gray-50">
-                        FIELD OF EXPERTISE
-                    </button>
-                    <button @click="activeTab = 'languages'" :class="{ 'bg-brand-green-light text-brand-teal': activeTab === 'languages', 'bg-white text-gray-500 hover:bg-gray-50': activeTab !== 'languages' }" class="border border-brand-gray/20 flex-1 font-semibold py-3 px-4 rounded-t-lg transition-colors duration-200 focus:outline-none bg-brand-green-light text-brand-teal">
-                        LANGUAGE SPOKEN
-                    </button>
-                </div>
+            <!-- TABS COMPONENT CONTAINER -->
+<div id="doctor-profile-tabs" class="mt-8">
+    <!-- Tab Buttons -->
+    <div class="flex flex-col sm:flex-row">
+        
+        <!-- Button 1: Overview -->
+        <!-- NOTE: The 'active' class is on by default. It has the active styles. -->
+        <button 
+            class="tab-button active flex-1 font-semibold py-3 px-4 transition-colors border-1 duration-200  rounded-t-lg "
+            data-tab="overview"
+        >
+            OVERVIEW
+        </button>
 
-                <!-- Tab Content Panels -->
-                <div class="bg-white p-6 rounded-b-lg shadow-md">
-                    <!-- Overview Panel -->
-                    <div x-show="activeTab === 'overview'" class="text-gray-700 text-sm leading-relaxed space-y-4" style="display: none;">
-                        <p>
-                            Lorem ipsum dolor sit amet consectetur. Odio ultrices quis nunc imperdiet sed ut platea mi leo. Cursus aliquam dui pellentesque id vel sagittis vel diam odio. Tellus vel pretium a massa velit. Viverra nibh magna ut sollicitudin maecenas mattis amet id a. Pharetra sollicitudin sodales iaculis urna urna fames eu nec ac. Purus eget eget pharetra lectus quis malesuada neque.
-                        </p>
-                        <p>
-                            Sed ullamcorper vulputate iaculis ut ultrices nunc vitae. Nam interdum donec in diam. Tincidunt in commodo adipiscing cursus porttitor habitasse a nisl. Pharetra id quisque sed donec justo. Ut pulvinar sit enim elementum sed duis fermentum sed quis. Leo volutpat metus nam gravida ullamcorper curabitur massa tortor egestas. Varius vitae purus erat non vitae. Faucibus ornare nullam nibh urna. Aenean congue sit tincidunt auctor. Non sed sed egestas diam egestas. Fusce nunc senectus a rhoncus consectetur id nunc eleifend. Leo aliquam pharetra sapien egestas iaculis.
-                        </p>
-                    </div>
+        <!-- Button 2: Expertise -->
+        <button 
+            class="tab-button flex-1 font-semibold py-3 px-4 transition-colors duration-200 border-1 -mt-px sm:mt-0 sm:-ml-px"
+            data-tab="expertise"
+        >
+            FIELD OF EXPERTISE
+        </button>
 
-                    <!-- Expertise Panel -->
-                    <div x-show="activeTab === 'expertise'" class="text-gray-700 text-sm leading-relaxed" style="display: none;">
-                        <p>Content for Field of Expertise goes here. This area can include a list of specializations, procedures the doctor performs, and areas of medical focus. It helps patients understand the doctor's specific skills.</p>
-                    </div>
+        <!-- Button 3: Languages -->
+        <button 
+            class="tab-button flex-1 font-semibold py-3 px-4 transition-colors duration-200 border-1 rounded-b-lg sm:rounded-b-none sm:rounded-tr-lg -mt-px sm:mt-0 sm:-ml-px"
+            data-tab="languages"
+        >
+            LANGUAGE SPOKEN
+        </button>
+    </div>
 
-                    <!-- Languages Panel -->
-                    <div x-show="activeTab === 'languages'" class="text-gray-700 text-sm leading-relaxed">
-                        <p>Content for Languages Spoken goes here. For example, you could list:</p>
-                        <ul class="list-disc pl-5 mt-2">
-                            <li>English</li>
-                            <li>Bengali</li>
-                            <li>Hindi</li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-            <!-- END: TABS COMPONENT -->
+    <!-- Tab Content Panels -->
+    <div class="relative bg-white p-6 rounded-b-lg shadow-md border-l border-r border-b border-brand-gray/20 ">
+        
+        <!-- Overview Panel -->
+        <!-- NOTE: It has a unique ID and the 'tab-panel' class. It's visible by default. -->
+        <div id="overview-panel" class="tab-panel text-gray-700 text-sm leading-relaxed space-y-4">
+            <p>
+                Lorem ipsum dolor sit amet consectetur. Odio ultrices quis nunc imperdiet sed ut platea mi leo. Cursus aliquam dui pellentesque id vel sagittis vel diam odio. Tellus vel pretium a massa velit. Viverra nibh magna ut sollicitudin maecenas mattis amet id a. Pharetra sollicitudin sodales iaculis urna urna fames eu nec ac. Purus eget eget pharetra lectus quis malesuada neque.
+            </p>
+            <p>
+                Sed ullamcorper vulputate iaculis ut ultrices nunc vitae. Nam interdum donec in diam. Tincidunt in commodo adipiscing cursus porttitor habitasse a nisl. Pharetra id quisque sed donec justo. Ut pulvinar sit enim elementum sed duis fermentum sed quis. Leo volutpat metus nam gravida ullamcorper curabitur massa tortor egestas. Varius vitae purus erat non vitae. Faucibus ornare nullam nibh urna. Aenean congue sit tincidunt auctor. Non sed sed egestas diam egestas. Fusce nunc senectus a rhoncus consectetur id nunc eleifend. Leo aliquam pharetra sapien egestas iaculis.
+            </p>
+        </div>
+
+        <!-- Expertise Panel -->
+        <!-- NOTE: This panel is hidden by default using an inline style. -->
+        <div id="expertise-panel" class="tab-panel text-gray-700 text-sm leading-relaxed" style="display: none;">
+            <p>Content for Field of Expertise goes here. This area can include a list of specializations, procedures the doctor performs, and areas of medical focus. It helps patients understand the doctor's specific skills.</p>
+        </div>
+
+        <!-- Languages Panel -->
+        <!-- NOTE: This panel is hidden by default using an inline style. -->
+        <div id="languages-panel" class="tab-panel text-gray-700 text-sm leading-relaxed" style="display: none;">
+            <p>Content for Languages Spoken goes here. For example, you could list:</p>
+            <ul class="list-disc pl-5 mt-2">
+                <li>English</li>
+                <li>Bengali</li>
+                <li>Hindi</li>
+            </ul>
+        </div>
+    </div>
+</div>
 
         </div>
     </div>
@@ -317,10 +334,10 @@
     </div>
 </section>
 
-    <section class="bg-white py-16 sm:py-24">
+    <section class="bg-white pt-12 sm:pt-12">
     <div class="container mx-auto px-4">
         <!-- Section Header -->
-        <div class="text-center mb-16">
+        <div class="text-center mb-4">
             <div class="inline-block bg-brand-green rounded-full py-3 px-5 mb-4">
                 <span class="text-lg font-semibold text-brand-teal">Testimonial</span>
             </div>
@@ -353,10 +370,10 @@
                                     <svg class="w-5 h-5 text-accent-yellow" fill="currentColor" viewBox="0 0 20 20"><path d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z"></path></svg>
                                 </div>
                                 <p class="text-brand-text leading-relaxed">This hospital is good an caring & Curing their patient. Staffs are great. Doctor and nurse are also good and efficient. Hope this will continue.</p>
-                                <p class="text-sm text-gray-600 mt-4 font-bold"><svg class="mt-12 ml-20" width="33" height="1" viewBox="0 0 33 1" fill="none" xmlns="http://www.w3.org/2000/svg">
-<path d="M0 0.5H33" stroke="black"/>
-</svg>
- Mr. Kiriti Bhusan</p>
+                                <br/>
+ <strong>Dibyendu Mukherjee</strong>
+ <br />
+ <p>15.11.2024 - 16.11.2024 ( IPD )</p>
                             </div>
                             <span class="absolute bottom-6 right-6 text-8xl text-brand-green-dark opacity-30 font-serif">”</span>
                         </div>
@@ -368,7 +385,10 @@
                             <div class="flex justify-between items-start">
                                 <div>
                                     <h4 class="font-semibold text-brand-text">About Video and patient problem</h4>
-                                    <p class="text-sm text-gray-600 mt-1">- Mr. Kiriti Bhusan</p>
+                                    <br/>
+ <strong>Dibyendu Mukherjee</strong>
+ <br />
+ <p>15.11.2024 - 16.11.2024 ( IPD )</p>
                                 </div>
                                 <span class="text-6xl text-brand-green-dark opacity-30 font-serif">”</span>
                             </div>
@@ -396,7 +416,10 @@
                                     <svg class="w-5 h-5 text-accent-yellow" fill="currentColor" viewBox="0 0 20 20"><path d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z"></path></svg>
                                 </div>
                                 <p class="text-brand-text leading-relaxed">The facilities are top-notch and the staff is incredibly supportive. A wonderful experience from start to finish.</p>
-                                <p class="text-sm text-gray-600 mt-6">- Jane Doe</p>
+                                <br/>
+ <strong>Dibyendu Mukherjee</strong>
+ <br />
+ <p>15.11.2024 - 16.11.2024 ( IPD )</p>
                             </div>
                             <span class="absolute bottom-6 right-6 text-8xl text-brand-green-dark opacity-30 font-serif">”</span>
                         </div>
