--- a/health-schemes.html
+++ b/health-schemes.html
@@ -168,7 +168,7 @@
          ================================================================= -->
     <nav class="bg-white border border-brand-gray mt-8">
         <div class="container mx-auto px-4 py-3">
-            <p class="text-sm text-gray-600">
+            <p class="text-md text-gray-600">
                 <a href="index.html" class="hover:text-brand-teal">Home</a>
                 <span class="mx-2">/</span>
                 <a href="#" class="hover:text-brand-teal">Departments</a>
@@ -185,7 +185,7 @@
 <!-- Add this new section right after the Other Packages section -->
 
 <!-- Health Schemes Section -->
-<section class="bg-white py-16 sm:py-24">
+<section class="bg-white py-12">
     <div class="container mx-auto px-4">
         <!-- Grid container for the two cards -->
         <div class="grid grid-cols-1 lg:grid-cols-2 gap-8 items-start">
