--- a/index.html
+++ b/index.html
@@ -148,7 +148,8 @@
    <!-- Hero Section -->
 <section class="bg-white pt-12 pb-4 sm:pt-12 sm:pb-12">
     <div class="container mx-auto px-4">
-        <div class="flex flex-col lg:flex-row items-center gap-12">
+        <!-- On mobile, this will now be a reversed column, placing the second item (image) on top -->
+        <div class="flex flex-col-reverse lg:flex-row items-center gap-12">
 
             <!-- Left Content -->
             <div class="lg:w-1/2 text-center lg:text-left z-10">
@@ -192,17 +193,18 @@
                 </div>
             </div>
 
+            <!-- Image Container -->
             <div class="lg:w-1/2 flex justify-center lg:justify-end mt-12 lg:mt-0">
-                        <div class="relative w-[300px] h-[300px] sm:w-[400px] sm:h-[400px] lg:w-[600px] lg:h-[600px]">
-                            <!-- Image container with inner shadow for depth -->
-                             <img src="assets/circle1.png" alt="Decorative frame" class="absolute inset-0 w-full h-full pt-12 object-contain pointer-events-none">
-        <img src="assets/circle2.png" alt="Decorative frame" class="absolute inset-0 w-full h-full pb-12  object-contain pointer-events-none">
+                <div class="relative w-[300px] h-[300px] sm:w-[400px] sm:h-[400px] lg:w-[600px] lg:h-[600px]">
+                    <!-- Image container with inner shadow for depth -->
+                     <img src="assets/circle1.png" alt="Decorative frame" class="absolute inset-0 w-full h-full pt-12 object-contain pointer-events-none">
+                     <img src="assets/circle2.png" alt="Decorative frame" class="absolute inset-0 w-full h-full pb-12  object-contain pointer-events-none">
          
-                            <div class="absolute inset-[20px] rounded-full overflow-hidden shadow-inner">
-                                <img src="assets/banner.jpg" alt="IQ City Hospital from outside" class="w-full h-full object-cover">
-                            </div>
-                        </div>
+                    <div class="absolute inset-[20px] rounded-full overflow-hidden shadow-inner">
+                        <img src="assets/banner.jpg" alt="IQ City Hospital from outside" class="w-full h-full object-cover">
                     </div>
+                </div>
+            </div>
             
         </div>
     </div>
