--- a/inner-page.html
+++ b/inner-page.html
@@ -150,7 +150,7 @@
     <!-- Breadcrumb Section -->
     <nav class="bg-white border-b border-gray-200">
         <div class="container mx-auto px-4 py-4">
-            <p class="text-sm text-gray-600">
+            <p class="text-md text-gray-600">
                 <a href="index.html" class="hover:text-brand-teal">Home</a>
                 <span class="mx-2">/</span>
                 <a href="events.html" class="hover:text-brand-teal">Events</a>
@@ -161,7 +161,7 @@
     </nav>
 
     <!-- Main Article Content Section -->
-    <section class="bg-white py-16 sm:py-24">
+    <section class="bg-white py-8">
         <div class="container mx-auto px-4">
             
             
