--- a/premium-health-checkup.html
+++ b/premium-health-checkup.html
@@ -168,7 +168,7 @@
          ================================================================= -->
     <nav class="bg-white border border-brand-gray mt-8">
         <div class="container mx-auto px-4 py-3">
-            <p class="text-sm text-gray-600">
+            <p class="text-md text-gray-600">
                 <a href="index.html" class="hover:text-brand-teal">Home</a>
                 <span class="mx-2">/</span>
                 <a href="#" class="hover:text-brand-teal">Patient Center</a>
@@ -186,7 +186,7 @@
 <!-- Add this new section right after the Health Schemes section -->
 
 <!-- Premium Health Checkup Packages Section -->
-<section class="bg-white py-16 sm:py-24">
+<section class="bg-white py-8">
     <div class="container mx-auto px-4">
 
         <!-- Section Title -->
