--- a/Insurance.html
+++ b/Insurance.html
@@ -187,9 +187,11 @@
     <div class="container mx-auto px-4">
 
         <!-- Top Block: Guidelines -->
-        <div class="grid grid-cols-1 lg:grid-cols-2 gap-12 items-center">
+<div class="grid grid-cols-1 lg:grid-cols-2 gap-12 items-center">
+            
             <!-- Left Column: Text Content -->
-            <div class="text-center lg:text-left">
+            <!-- UPDATED: Added classes to control grid row placement -->
+            <div class="text-center lg:text-left row-start-2 lg:row-auto">
                 <h2 class="text-3xl md:text-4xl font-bold text-brand-teal leading-tight">
                     Guidelines for Cashless Hospitalization is as Detailed Below
                 </h2>
@@ -200,8 +202,10 @@
                     In case of Denial from TPA entire Bill amount is to be paid and submit the claims for possible reimbursement.
                 </p>
             </div>
+
             <!-- Right Column: Image -->
-            <div>
+            <!-- UPDATED: Added classes to control grid row placement -->
+            <div class="row-start-1 lg:row-auto">
                 <img src="assets/inn-inner.jpg" alt="A person making a cashless payment with a credit card on a mobile terminal" class="rounded-2xl shadow-lg w-full h-auto object-cover">
             </div>
         </div>
