--- a/index.html
+++ b/index.html
@@ -40,15 +40,26 @@
         <!-- START: MOBILE & TABLET HEADER -->
         <div class="lg:hidden">
             <div class="container mx-auto px-4 flex justify-between items-center py-2">
-                <a href="index.html" class="block w-12 flex-shrink-0"><img src="assets/logo.png" alt="IQ City Logo"></a>
-                <div class="flex items-center h-10 gap-2 border-l border-gray-200 pl-3">
-                    <img src="assets/nav-1.png" alt="Accreditation Logo 1" class="h-14 w-14">
-                    <img src="assets/nav-2.png" alt="Accreditation Logo 2" class="h-14 w-14">
-                </div>
-                <button id="mobile-menu-button" class="text-brand-teal focus:outline-none">
-                    <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16m-7 6h7"></path></svg>
-                </button>
+        <!-- Left Side: Main Logo -->
+        <a href="index.html" class="block w-12 flex-shrink-0">
+            <img src="assets/logo.png" alt="IQ City Logo">
+        </a>
+
+        <!-- Right Side: Group of other logos and menu button -->
+        <div class="flex items-center gap-4">
+            <!-- Accreditation Logos -->
+            <div class="flex items-center h-10 gap-2">
+                <!-- Using h-12 and w-auto to prevent stretching -->
+                <img src="assets/nav-1.png" alt="Accreditation Logo 1" class="h-12 w-auto">
+                <img src="assets/nav-2.png" alt="Accreditation Logo 2" class="h-12 w-auto">
             </div>
+
+            <!-- Mobile Menu Button -->
+            <button id="mobile-menu-button" class="text-brand-teal focus:outline-none">
+                <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16m-7 6h7"></path></svg>
+            </button>
+        </div>
+    </div>
         </div>
 
         <!-- START: DESKTOP HEADER TOP SECTION -->
@@ -1092,9 +1103,9 @@
             </button>
 
             <!-- Slider Viewport -->
-            <div class="overflow-x-auto p-12">
+            <div class="overflow-x-auto p-12 scrollbar-hide">
                 <!-- Slider Track -->
-                <div id="testimonials-slider" class="flex -mx-4">
+                <div id="testimonials-slider " class="flex -mx-4">
                     
                     <!-- Card 1 (MAIN TEXT TESTIMONIAL) -->
                     <div class="w-full md:w-1/2 lg:w-1/3 px-4 flex-shrink-0">
