--- a/doctors.html
+++ b/doctors.html
@@ -153,7 +153,7 @@
     <section class="bg-white pt-12 pb-4 sm:pt-12 sm:pb-12">
     <div class="container mx-auto px-4">
         <!-- On mobile, this will now be a reversed column, placing the second item (image) on top -->
-        <div class="flex flex-col-reverse lg:flex-row items-center gap-12">
+        <div class="flex flex-col-reverse xl:flex-row items-center gap-12">
 
             <!-- Left Content -->
             <div class="lg:w-1/2 text-center lg:text-left z-10">
@@ -198,7 +198,7 @@
             </div>
 
             <!-- Image Container -->
-            <div class="lg:w-1/2 flex justify-center lg:justify-end mt-12 lg:mt-0">
+            <div class="xl:w-1/2 flex justify-center xl:justify-end mt-12 lg:mt-0">
                 <div class="relative w-[300px] h-[300px] sm:w-[400px] sm:h-[400px] lg:w-[600px] lg:h-[600px]">
                     <!-- Image container with inner shadow for depth -->
                      <img src="assets/circle1.png" alt="Decorative frame" class="absolute inset-0 w-full h-full pt-12 object-contain pointer-events-none">
