Fix the header issue

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
     </div>
 </header>
 
-<main>
+<main id="page-content">
     
    <!-- Hero Section -->
 <section class="bg-white pt-12 pb-4 sm:pt-12 sm:pb-12">
