--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
     </div>
 </header>
 
-<main id="page-content">
+<main >
     
    <!-- Hero Section -->
 <section class="bg-white pt-12 pb-4 sm:pt-12 sm:pb-12">
@@ -825,7 +825,7 @@
                                 </div>
                             </div>
                             <!-- Right: Accordion (This part has the white background and shadow) -->
-                            <div class="lg:w-7/12 w-full bg-white border border-gray-200/80 p-6 md:p-8">
+                            <div class="lg:w-7/12 w-full bg-white border border-gray-200/80 p-6 md:p-8 rounded-2xl rounded-l-none">
                                 <div class="space-y-4 flex-grow">
                                     <!-- Your existing accordion items go here, they are styled correctly -->
                                     <div class="border-b border-gray-200 pb-4">
@@ -865,7 +865,7 @@
                                 </div>
                             </div>
                              <!-- Right: Accordion for Doctor 2 -->
-                            <div class="lg:w-7/12 w-full bg-white border border-gray-200/80 p-6 md:p-8">
+                            <div class="lg:w-7/12 w-full bg-white border border-gray-200/80 p-6 md:p-8 rounded-2xl rounded-l-none">
                                 <div class="space-y-4 flex-grow">
                                     <!-- Your existing accordion items go here, they are styled correctly -->
                                     <div class="border-b border-gray-200 pb-4">
