--- a/a.html
+++ b/a.html
@@ -8,6 +8,10 @@
 			rel="stylesheet"
 			href="https://cdn.jsdelivr.net/npm/swiper@12/swiper-bundle.min.css"
 		/>
+		<link
+			rel="stylesheet"
+			href="https://cdn.jsdelivr.net/npm/@tabler/icons-webfont@latest/tabler-icons.min.css"
+		/>
 		<style>
 			.swiper-wrapper {
 				align-items: stretch !important;
@@ -60,7 +64,7 @@
 							<div class="swiper-slide h-[300px]!">
 								<a
 									href="http://home.samuraiscripter.com/hospital/department/leprosy/"
-									class="bg-white p-4 py-12 rounded-3xl h-full flex  items-center justify-center flex-col shadow-md text-center transition-all duration-300 ease-in-out hover:-translate-y-2 hover:shadow-xl"
+									class="bg-white p-4 py-12 rounded-3xl h-full flex items-center justify-center flex-col shadow-md text-center transition-all duration-300 ease-in-out hover:-translate-y-2 hover:shadow-xl"
 								>
 									<div
 										class="bg-brand-green-light w-24 h-24 rounded-full mx-auto flex items-center justify-center mb-5"
@@ -75,7 +79,7 @@
 							<div class="swiper-slide h-[300px]!">
 								<a
 									href="http://home.samuraiscripter.com/hospital/department/leprosy/"
-									class="bg-white p-4 py-12 rounded-3xl h-full flex  items-center justify-center flex-col shadow-md text-center transition-all duration-300 ease-in-out hover:-translate-y-2 hover:shadow-xl"
+									class="bg-white p-4 py-12 rounded-3xl h-full flex items-center justify-center flex-col shadow-md text-center transition-all duration-300 ease-in-out hover:-translate-y-2 hover:shadow-xl"
 								>
 									<div
 										class="bg-brand-green-light w-24 h-24 rounded-full mx-auto flex items-center justify-center mb-5"
@@ -88,7 +92,7 @@
 							<div class="swiper-slide h-[300px]!">
 								<a
 									href="http://home.samuraiscripter.com/hospital/department/leprosy/"
-									class="bg-white p-4 py-12 rounded-3xl h-full flex  items-center justify-center flex-col shadow-md text-center transition-all duration-300 ease-in-out hover:-translate-y-2 hover:shadow-xl"
+									class="bg-white p-4 py-12 rounded-3xl h-full flex items-center justify-center flex-col shadow-md text-center transition-all duration-300 ease-in-out hover:-translate-y-2 hover:shadow-xl"
 								>
 									<div
 										class="bg-brand-green-light w-24 h-24 rounded-full mx-auto flex items-center justify-center mb-5"
@@ -101,7 +105,7 @@
 							<div class="swiper-slide h-[300px]!">
 								<a
 									href="http://home.samuraiscripter.com/hospital/department/leprosy/"
-									class="bg-white p-4 py-12 rounded-3xl h-full flex  items-center justify-center flex-col shadow-md text-center transition-all duration-300 ease-in-out hover:-translate-y-2 hover:shadow-xl"
+									class="bg-white p-4 py-12 rounded-3xl h-full flex items-center justify-center flex-col shadow-md text-center transition-all duration-300 ease-in-out hover:-translate-y-2 hover:shadow-xl"
 								>
 									<div
 										class="bg-brand-green-light w-24 h-24 rounded-full mx-auto flex items-center justify-center mb-5"
@@ -114,7 +118,7 @@
 							<div class="swiper-slide h-[300px]!">
 								<a
 									href="http://home.samuraiscripter.com/hospital/department/leprosy/"
-									class="bg-white p-4 py-12 rounded-3xl h-full flex  items-center justify-center flex-col shadow-md text-center transition-all duration-300 ease-in-out hover:-translate-y-2 hover:shadow-xl"
+									class="bg-white p-4 py-12 rounded-3xl h-full flex items-center justify-center flex-col shadow-md text-center transition-all duration-300 ease-in-out hover:-translate-y-2 hover:shadow-xl"
 								>
 									<div
 										class="bg-brand-green-light w-24 h-24 rounded-full mx-auto flex items-center justify-center mb-5"
@@ -127,7 +131,7 @@
 							<div class="swiper-slide h-[300px]!">
 								<a
 									href="http://home.samuraiscripter.com/hospital/department/leprosy/"
-									class="bg-white p-4 py-12 rounded-3xl h-full flex  items-center justify-center flex-col shadow-md text-center transition-all duration-300 ease-in-out hover:-translate-y-2 hover:shadow-xl"
+									class="bg-white p-4 py-12 rounded-3xl h-full flex items-center justify-center flex-col shadow-md text-center transition-all duration-300 ease-in-out hover:-translate-y-2 hover:shadow-xl"
 								>
 									<div
 										class="bg-brand-green-light w-24 h-24 rounded-full mx-auto flex items-center justify-center mb-5"
