--- a/a.html
+++ b/a.html
@@ -12,11 +12,6 @@
 			rel="stylesheet"
 			href="https://cdn.jsdelivr.net/npm/@tabler/icons-webfont@latest/tabler-icons.min.css"
 		/>
-		<style>
-			.swiper-wrapper {
-				align-items: stretch !important;
-			}
-		</style>
 		<title>Document</title>
 	</head>
 	<body>
@@ -61,10 +56,10 @@
 						class="department-swiper overflow-hidden py-4 swiper-initialized swiper-horizontal swiper-pointer-events"
 					>
 						<div class="swiper-wrapper">
-							<div class="swiper-slide h-[300px]!">
+							<div class="swiper-slide">
 								<a
 									href="http://home.samuraiscripter.com/hospital/department/leprosy/"
-									class="bg-white p-4 py-12 rounded-3xl h-full flex items-center justify-center flex-col shadow-md text-center transition-all duration-300 ease-in-out hover:-translate-y-2 hover:shadow-xl"
+									class="bg-white p-4 py-12 rounded-3xl h-full block shadow-md text-center transition-all duration-300 ease-in-out hover:-translate-y-2 hover:shadow-xl"
 								>
 									<div
 										class="bg-brand-green-light w-24 h-24 rounded-full mx-auto flex items-center justify-center mb-5"
@@ -76,10 +71,10 @@
 									</h3>
 								</a>
 							</div>
-							<div class="swiper-slide h-[300px]!">
+							<div class="swiper-slide">
 								<a
 									href="http://home.samuraiscripter.com/hospital/department/leprosy/"
-									class="bg-white p-4 py-12 rounded-3xl h-full flex items-center justify-center flex-col shadow-md text-center transition-all duration-300 ease-in-out hover:-translate-y-2 hover:shadow-xl"
+									class="bg-white p-4 py-12 rounded-3xl h-full block shadow-md text-center transition-all duration-300 ease-in-out hover:-translate-y-2 hover:shadow-xl"
 								>
 									<div
 										class="bg-brand-green-light w-24 h-24 rounded-full mx-auto flex items-center justify-center mb-5"
@@ -89,10 +84,10 @@
 									<h3 class="text-lg font-bold text-brand-text">Leprosy</h3>
 								</a>
 							</div>
-							<div class="swiper-slide h-[300px]!">
+							<div class="swiper-slide">
 								<a
 									href="http://home.samuraiscripter.com/hospital/department/leprosy/"
-									class="bg-white p-4 py-12 rounded-3xl h-full flex items-center justify-center flex-col shadow-md text-center transition-all duration-300 ease-in-out hover:-translate-y-2 hover:shadow-xl"
+									class="bg-white p-4 py-12 rounded-3xl h-full block shadow-md text-center transition-all duration-300 ease-in-out hover:-translate-y-2 hover:shadow-xl"
 								>
 									<div
 										class="bg-brand-green-light w-24 h-24 rounded-full mx-auto flex items-center justify-center mb-5"
@@ -102,10 +97,10 @@
 									<h3 class="text-lg font-bold text-brand-text">Leprosy</h3>
 								</a>
 							</div>
-							<div class="swiper-slide h-[300px]!">
+							<div class="swiper-slide">
 								<a
 									href="http://home.samuraiscripter.com/hospital/department/leprosy/"
-									class="bg-white p-4 py-12 rounded-3xl h-full flex items-center justify-center flex-col shadow-md text-center transition-all duration-300 ease-in-out hover:-translate-y-2 hover:shadow-xl"
+									class="bg-white p-4 py-12 rounded-3xl h-full block shadow-md text-center transition-all duration-300 ease-in-out hover:-translate-y-2 hover:shadow-xl"
 								>
 									<div
 										class="bg-brand-green-light w-24 h-24 rounded-full mx-auto flex items-center justify-center mb-5"
@@ -115,10 +110,10 @@
 									<h3 class="text-lg font-bold text-brand-text">Leprosy</h3>
 								</a>
 							</div>
-							<div class="swiper-slide h-[300px]!">
+							<div class="swiper-slide">
 								<a
 									href="http://home.samuraiscripter.com/hospital/department/leprosy/"
-									class="bg-white p-4 py-12 rounded-3xl h-full flex items-center justify-center flex-col shadow-md text-center transition-all duration-300 ease-in-out hover:-translate-y-2 hover:shadow-xl"
+									class="bg-white p-4 py-12 rounded-3xl h-full block shadow-md text-center transition-all duration-300 ease-in-out hover:-translate-y-2 hover:shadow-xl"
 								>
 									<div
 										class="bg-brand-green-light w-24 h-24 rounded-full mx-auto flex items-center justify-center mb-5"
@@ -128,10 +123,10 @@
 									<h3 class="text-lg font-bold text-brand-text">Leprosy</h3>
 								</a>
 							</div>
-							<div class="swiper-slide h-[300px]!">
+							<div class="swiper-slide">
 								<a
 									href="http://home.samuraiscripter.com/hospital/department/leprosy/"
-									class="bg-white p-4 py-12 rounded-3xl h-full flex items-center justify-center flex-col shadow-md text-center transition-all duration-300 ease-in-out hover:-translate-y-2 hover:shadow-xl"
+									class="bg-white p-4 py-12 rounded-3xl h-full block shadow-md text-center transition-all duration-300 ease-in-out hover:-translate-y-2 hover:shadow-xl"
 								>
 									<div
 										class="bg-brand-green-light w-24 h-24 rounded-full mx-auto flex items-center justify-center mb-5"
